Removing overview Button

--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
           </a>
         </div>
       </div>
+
       <div class="Sched">
         <div class="about pt-36 mb-20">
           <p class="title-1 text-5xl mb-12">Events Schedule</p>
@@ -468,8 +469,7 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="accordion-item">
+          <div class="accordion-item">
             <h2 class="accordion-header" id="heading7">
               <button
                 class="accordion-button collapsed"
@@ -517,10 +517,8 @@
       <div class="Sched">
         <div class="about pt-36 mb-20">
         <p class="title-1 text-5xl mb-12">Meet the Pantheon</p>
-      </div>
-      <div
-        class="Team-wrapper grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-24"
-      >
+        </div>
+        <div class="Team-wrapper grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-24">
         <div class="Profile">
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
@@ -666,7 +664,10 @@
             <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
           </div>
         </div>
+        </div>
       </div>
+      <br />
+
       <div class="faq mb-48">
         <p class="title-1 text-5xl mb-12">Questions?</p>
         <p class="text-4xl">Email Sofia Ramos at sramo2@illinois.edu.</p>
