removed overview/rules button

--- a/index.html
+++ b/index.html
@@ -264,14 +264,6 @@
           email Sofia Ramos at sramo2@illinois.edu.
         </p>
         <div class="flex flex-wrap">
-          <!-- <a
-            href="https://docs.google.com/document/d/1791i-WRYdgU7kL8WtYQ8WJXHcYC_h0OPlf-XnSu7A88/edit?usp=sharing"
-            target="_blank"
-            class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
-          >
-            Overview/Rules
-          </a>
-        -->
           <a
             href="https://docs.google.com/forms/d/e/1FAIpQLSd9yMA18cH6AAMoC4Ir5o44zkxSdXlj5UDhNTv9D4V5OP4dcA/viewform"
             target="_blank"
@@ -302,7 +294,6 @@
           </a>
         </div>
       </div>
-
       <div class="Sched">
         <div class="about pt-36 mb-20">
           <p class="title-1 text-5xl mb-12">Events Schedule</p>
@@ -473,7 +464,8 @@
               </div>
             </div>
           </div>
-          <div class="accordion-item">
+        </div>
+        <div class="accordion-item">
             <h2 class="accordion-header" id="heading7">
               <button
                 class="accordion-button collapsed"
@@ -520,8 +512,10 @@
       <div class="Sched">
         <div class="about pt-36 mb-20">
         <p class="title-1 text-5xl mb-12">Meet the Pantheon</p>
-        </div>
-        <div class="Team-wrapper grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-24">
+      </div>
+      <div
+        class="Team-wrapper grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-24"
+      >
         <div class="Profile">
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
@@ -667,10 +661,7 @@
             <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
           </div>
         </div>
-        </div>
       </div>
-      <br />
-
       <div class="faq mb-48">
         <p class="title-1 text-5xl mb-12">Questions?</p>
         <p class="text-2xl mb-12">Email Sofia Ramos at sramo2@illinois.edu.</p>
