--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmaller.png"
+              src="EWeek2023LogoSmall.png"
               alt="product designer"
             />
             <h1 class="text-lg">Vincent Ma</h1>
@@ -544,7 +544,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmaller.png"
+              src="EWeek2023LogoSmall.png"
               alt="product designer"
             />
             <h1 class="text-lg">Max Issel</h1>
@@ -568,7 +568,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmaller.png"
+              src="EWeek2023LogoSmall.png"
               alt="product designer"
             />
             <h1 class="text-lg">Rafael Wersom</h1>
@@ -580,7 +580,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmaller.png"
+              src="EWeek2023LogoSmall.png"
               alt="product designer"
             />
             <h1 class="text-lg">Unknown</h1>
@@ -604,7 +604,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmaller.png"
+              src="EWeek2023LogoSmall.png"
               alt="product designer"
             />
             <h1 class="text-lg">Anush Rajan</h1>
@@ -616,7 +616,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmaller.png"
+              src="EWeek2023LogoSmall.png"
               alt="product designer"
             />
             <h1 class="text-lg">Juan Pedroza</h1>
@@ -628,7 +628,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmaller.png"
+              src="EWeek2023LogoSmall.png"
               alt="product designer"
             />
             <h1 class="text-lg">Connie Lu</h1>
@@ -640,7 +640,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmaller.png"
+              src="EWeek2023LogoSmall.png"
               alt="product designer"
             />
             <h1 class="text-lg">Unknown</h1>
@@ -652,7 +652,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmaller.png"
+              src="EWeek2023LogoSmall.png"
               alt="product designer"
               id="circle"
             />
