--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/Sofia Ramos - Marketing.jpeg"
+              src="teamimages/Sofia Ramos - Director.jpg"
               alt="product designer"
             />
             <h1 class="text-lg">Sofia Ramos</h1>
@@ -532,7 +532,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmall.png"
+              src="teamimages/Vincent Ma - Co-Events.jpg"
               alt="product designer"
             />
             <h1 class="text-lg">Vincent Ma</h1>
@@ -544,7 +544,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmall.png"
+              src="teamimages/Max Issel - Co-Events.jpg"
               alt="product designer"
             />
             <h1 class="text-lg">Max Issel</h1>
@@ -556,7 +556,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/Andrew Chen - Cheap Lunch.jpg"
+              src="teamimages/Andrew Chen - Co-Webmaster.jpg"
               alt="product designer"
             />
             <h1 class="text-lg">Andrew Chen</h1>
@@ -568,7 +568,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmall.png"
+              src="teamimages/Rafael Wersom - Co-Webmaster.jpg"
               alt="product designer"
             />
             <h1 class="text-lg">Rafael Wersom</h1>
@@ -592,7 +592,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="teamimages/Bella Ramos - Director.jpg"
+              src="teamimages/Bella Ramos - Marketing.jpg"
               alt="product designer"
             />
             <h1 class="text-lg">Bella Ramos</h1>
@@ -616,7 +616,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmall.png"
+              src="teamimages/Juan Pedroza - Co-Society.jpg"
               alt="product designer"
             />
             <h1 class="text-lg">Juan Pedroza</h1>
@@ -628,7 +628,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmall.png"
+              src="teamimages/Connie Lu - Cheap Lunch.jpg"
               alt="product designer"
             />
             <h1 class="text-lg">Connie Lu</h1>
@@ -652,7 +652,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmall.png"
+              src="teamimages/Chinmay Bhogilal - Corporate.jpg"
               alt="product designer"
               id="circle"
             />
