updated schedule/Hosting E-Week removed

--- a/index.html
+++ b/index.html
@@ -285,13 +285,6 @@
           >
             Join the Order of the Engineer
           </a>
-          <a
-            href="https://docs.google.com/forms/d/e/1FAIpQLSdOPRNOxzy7nnGiN9DAy3kUUKAWaAwaRFLM1NyHWDoXYllIhA/viewform"
-            target="_blank"
-            class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
-          >
-            Help Host E-Week!
-          </a>
         </div>
       </div>
       <div class="Sched">
@@ -459,8 +452,8 @@
             >
               <div class="accordion-body">
                 <strong>10:30-2:00pm</strong> - Cheap Lunch <br /><br />
-                <strong>5:00-6:00pm</strong> - Dodgeball <br /><br />
-                <strong>7:00-8:00pm</strong> - 3 Leg Race <br /><br />
+                <strong>5:00-6:00pm</strong> - 3 Leg Race <br /><br />
+                <strong>7:00-9:00pm</strong> - Capture the Flag <br /><br />
               </div>
             </div>
           </div>
