--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       <div class="home mb-96">
         <nav class="flex mt-12">
           <a href="index.html" class="text-2xl mr-8">Home</a>
-          <a href="videos.html" class="text-2xl">Video Submissions</a>
+          <a href="videos.html" class="text-2xl mr-8">Video Submissions</a>
+          <a href="https://docs.google.com/spreadsheets/d/1gOMKd9V-JzFtX4q22SJgEE1AXHh00ERhugrh0lW_jf4/edit#gid=0" class="text-2xl mr-8">Team Points</a>
         </nav>
         
         <div class="header mt-6 mb-24 flex">
@@ -277,13 +278,6 @@
             class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
           >
             Captain's Packet
-          </a>
-          <a
-            href="https://docs.google.com/document/d/1791i-WRYdgU7kL8WtYQ8WJXHcYC_h0OPlf-XnSu7A88/edit?usp=sharing"
-            target="_blank"
-            class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
-          >
-            Overview/Rules
           </a>
           <a
             href="https://forms.gle/JgNLmWtCE2ppeM7D6"
