--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <nav class="flex mt-12">
           <a href="index.html" class="text-2xl mr-8">Home</a>
           <a href="videos.html" class="text-2xl mr-8">Video Submissions</a>
-          <a href="https://docs.google.com/spreadsheets/d/1gOMKd9V-JzFtX4q22SJgEE1AXHh00ERhugrh0lW_jf4/edit#gid=0" class="text-2xl mr-8">Team Points</a>
+          <a href="https://docs.google.com/spreadsheets/d/1gOMKd9V-JzFtX4q22SJgEE1AXHh00ERhugrh0lW_jf4/edit#gid=0" target="_blank" class="text-2xl mr-8">Team Points</a>
         </nav>
         
         <div class="header mt-6 mb-24 flex">
