forgot margin in title headr

--- a/videos.html
+++ b/videos.html
@@ -33,7 +33,7 @@
     <div class="main ml-auto mr-auto">
       <nav class="flex mt-12 mb-24">
         <a href="index.html" class="text-2xl mr-8">Home</a>
-        <a href="videos.html" class="text-2xl">Video Submissions</a>
+        <a href="videos.html" class="text-2xl mr-8">Video Submissions</a>
         <a href="https://docs.google.com/spreadsheets/d/1gOMKd9V-JzFtX4q22SJgEE1AXHh00ERhugrh0lW_jf4/edit#gid=0" target="_blank" class="text-2xl mr-8">Team Points</a>
       </nav>
       
