--- a/index.html
+++ b/index.html
@@ -280,6 +280,13 @@
             Captain's Packet
           </a>
           <a
+            href="https://docs.google.com/document/d/1791i-WRYdgU7kL8WtYQ8WJXHcYC_h0OPlf-XnSu7A88/edit?usp=sharing"
+            target="_blank"
+            class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
+          >
+            Overview/Rules
+          </a>
+          <a
             href="https://forms.gle/JgNLmWtCE2ppeM7D6"
             target="_blank"
             class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
