Added Events and Cheap Lunch

--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>11:00-2:00pm</strong> - Cheap Lunch <br /><br />
+                <strong>11:00-2:00pm</strong> - Cheap Lunch (Jimmy John's) <br /><br />
+                <strong>4:00-5:00pm</strong> - Rocket Building with ISS at Talbot Lab 319 (Open for all) <br /><br />
                 <strong>5:00-6:00pm</strong> - Poop the Potato <br /><br />
                 <strong>6:00-7:00pm</strong> - Trivia <br /><br />
                 <strong>7:00-9:00pm</strong> - Dizzy Demigod <br /><br />
@@ -376,11 +377,11 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>11:00-2:00pm</strong> - Cheap Lunch <br /><br />
-                <strong>4:00-5:00pm</strong> - Water Pong <br />
-                <br />
+                <strong>11:00-2:00pm</strong> - Cheap Lunch (Manolo's) <br /><br />
+                <strong>4:00-5:00pm</strong> - Water Pong <br /><br />
                 <strong>5:00-6:00pm</strong> - Bags <br /><br />
                 <strong>6:00-7:00pm</strong> - Karaoke <br /><br />
+                <strong>7:00-8:00pm</strong> - Design 4 Good with IDC at EHall 103C (Open for All) <br /><br />
                 <strong>8:00-9:00pm</strong> - Amazing Race <br /><br />
               </div>
             </div>
@@ -405,9 +406,10 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>11:00-2:00pm</strong> - Cheap Lunch <br /><br />
+                <strong>11:00-2:00pm</strong> - Cheap Lunch (Maize) <br /><br />
                 <strong>4:00-5:00pm</strong> - Walk the Plank <br /><br />
                 <strong>5:00-6:00pm</strong> - Engineering Relay <br /><br />
+                <strong>5:15pm</strong> - Engineering Trivia with SHPE/NSBE at EHall 103A (Open for All) <br /><br />
                 <strong>6:30-8:00pm</strong> - Costume Contest <br /><br />
                 <strong>9:00pm-11:00pm</strong> - Broomball <br /><br />
               </div>
@@ -433,7 +435,8 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>11:00-2:00pm</strong> - Cheap Lunch <br /><br />
+                <strong>11:00-2:00pm</strong> - Cheap Lunch (D.P. Dough) <br /><br />
+                <strong>2:00pm</strong> - Jeopardy with WECE at ECEB (Open for All) <br /><br />
                 <strong>5:00-7:00pm</strong> - Order of the Engineer <br /><br />
                 <strong>9:00-Midnight</strong> - Tour of Establishments <br /><br />
               </div>
@@ -459,9 +462,10 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
-                <strong>11:00-2:00pm</strong> - Cheap Lunch <br /><br />
+                <strong>11:00-2:00pm</strong> - Cheap Lunch (Chipotle) <br /><br />
+                <strong>2:00-4:00pm</strong> - Pie a President at Bardeen Quad (Open for All) <br /><br />
                 <strong>5:00-6:00pm</strong> - 3 Leg Race <br /><br />
-                <strong>7:00-9:00pm</strong> - Capture the Flag <br /><br />
+                <strong>7:00-9:00pm</strong> - Capture the Flag (Open for All) <br /><br />
               </div>
             </div>
           </div>
@@ -486,6 +490,7 @@
               data-bs-parent="#accordionExample"
             >
               <div class="accordion-body">
+                <strong>12:00pm</strong> - Build a Baja with Off-Road Illini at ESPL (Open for All) <br /><br />
                 <strong>10:00-Midnight</strong> - Semi-Formal <br /><br />
               </div>
             </div>
