--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                 <strong>5:00-6:00pm</strong> - Engineering Relay <br /><br />
                 <strong>5:15pm</strong> - Engineering Trivia with SHPE/NSBE at EHall 103A (Open for All) <br /><br />
                 <strong>6:30-8:00pm</strong> - Costume Contest <br /><br />
-                <strong>9:00pm-11:00pm</strong> - Broomball <br /><br />
+                <strong>9:00pm-11:00pm</strong> - Broomball (Canceled) Alternate Event at EHall <br /><br />
               </div>
             </div>
           </div>
