updated website to account for website-assets folder

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <link rel="icon" href="./logo.png" />
-    <meta property="og:image" content="./logo.png" />
+    <link rel="icon" href="./website-assets/logo.png" />
+    <meta property="og:image" content="./website-assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type="text/css">
       body {
@@ -586,7 +586,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmall.png"
+              src="./website-assets/EWeek2023LogoSmall.png"
               alt="product designer"
             />
             <h1 class="text-lg">Unknown</h1>
@@ -610,7 +610,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmall.png"
+              src="./website-assets/EWeek2023LogoSmall.png"
               alt="product designer"
             />
             <h1 class="text-lg">Anush Rajan</h1>
@@ -646,7 +646,7 @@
           <div class="font-semibold text-center p-10 max-w-sm">
             <img
               class="mb-3 w-32 h-32 rounded-full mx-auto object-cover"
-              src="EWeek2023LogoSmall.png"
+              src="./website-assets/EWeek2023LogoSmall.png"
               alt="product designer"
             />
             <h1 class="text-lg">Unknown</h1>
