--- a/videos.html
+++ b/videos.html
@@ -19,8 +19,8 @@
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <link rel="icon" href="./logo.svg" />
-    <meta property="og:image" content="./logo.svg" />
+    <link rel="icon" href="./website-assets/logo.svg" />
+    <meta property="og:image" content="./website-assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style type="text/css">
       body {
